// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Micro Process Flow Micro process flow with custom node width 1`] = `
<div
  class="fd-micro-process-flow"
>
  
    
  <div
    class="fd-micro-process-flow__overflow-container"
  >
    
        
    <div
      class="fd-micro-process-flow__wrapper"
    >
      
            
      <div
        class="fd-micro-process-flow__item"
        style="width: 8rem;"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            />
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
        style="width: 4rem;"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--pending"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector fd-micro-process-flow__connector--intermediate"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
        style="width: 4.5rem;"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--phone"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
        style="width: 6rem;"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--map"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
        style="width: 7rem;"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--log"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Micro Process Flow Micro process flow with custom steps 1`] = `
<div
  class="fd-micro-process-flow"
>
  
    
  <div
    class="fd-micro-process-flow__overflow-container"
  >
    
        
    <div
      class="fd-micro-process-flow__wrapper"
    >
      
            
      <div
        class="fd-micro-process-flow__item"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              aria-label="Euro Status Indicator Medium default size"
              aria-roledescription="Status Indicator"
              aria-valuetext="50%"
              class="fd-status-indicator fd-status-indicator--critical fd-status-indicator--md fd-micro-process-flow__focusable-item"
              focusable="true"
              role="progressbar"
              tabindex="0"
              title="50% with default medium size"
            >
              
                            
              <svg
                class="fd-status-indicator__svg"
                data-sap-ui="__shape0-__box21-24"
                height="100%"
                id="__shape0__box2-24"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="0 0 26 25"
                width="100%"
                x="0"
                xlmns="http://www.w3.org/2000/svg"
                y="0"
              >
                
                            
                <svg
                  data-sap-ui="__path11"
                  id="__path11"
                  overflow="visible"
                  preserveAspectRatio="xMidYMid meet"
                  xlmns="http://www.w3.org/2000/svg"
                >
                  
                                
                  <defs>
                    
                                
                    <lineargradient
                      id="__path11-gradient"
                      x1="0"
                      x2="0"
                      y1="1"
                      y2="0"
                    >
                      
                                    
                      <stop
                        offset="0.5"
                        stop-color="white"
                      />
                      
                                    
                      <stop
                        offset="0.5"
                        stop-color="transparent"
                      />
                      
                                
                    </lineargradient>
                    
                                
                    <mask
                      id="__path11-mask"
                    >
                      
                                    
                      <path
                        d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
                                                l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
                                                c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
                                                l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                        fill="url(#__path11-gradient)"
                        id="__path11-mask-shape"
                        stroke="white"
                        stroke-width="0"
                      >
                        
                                    
                      </path>
                      
                                
                    </mask>
                    
                                
                  </defs>
                  
                                
                  <path
                    d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
                                        l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
                                        c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
                                        l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                    id="__path11-shape"
                    mask="url(#__path11-mask)"
                    stroke="#89919A "
                    stroke-width="0"
                  >
                    
                                
                  </path>
                  
                                
                  <path
                    d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
                                        l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
                                        c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
                                        l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                    fill="transparent"
                    id="__path11-shape-border"
                    stroke="#89919A "
                    stroke-width="0.25"
                  >
                    
                                
                  </path>
                  
                            
                </svg>
                
                            
              </svg>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              aria-label="Status Indicator example for order dispatching"
              aria-roledescription="Status Indicator"
              aria-valuetext="70%"
              class="fd-status-indicator fd-status-indicator--positive coreographed fd-status-indicator--md fd-micro-process-flow__focusable-item"
              focusable="true"
              role="progressbar"
              tabindex="0"
              title="Fill object to form single filling pattern"
            >
              
                            
              <svg
                class="fd-status-indicator__svg"
                data-sap-ui="__shape0-__box21-24"
                height="100%"
                id="__shape0__box32-24-cart"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="0 0 26 25"
                width="100%"
                x="0"
                xlmns="http://www.w3.org/2000/svg"
                y="0"
              >
                
                                
                <svg
                  data-sap-ui="__path32"
                  id="__path32"
                  overflow="visible"
                  preserveAspectRatio="xMidYMid meet"
                  xlmns="http://www.w3.org/2000/svg"
                >
                  
                                    
                  <defs>
                    
                                    
                    <lineargradient
                      id="__path32-gradient"
                      x1="0"
                      x2="0"
                      y1="1"
                      y2="0"
                    >
                      
                                        
                      <stop
                        offset="1"
                        stop-color="white"
                      />
                      
                                        
                      <stop
                        offset="1"
                        stop-color="transparent"
                      />
                      
                                    
                    </lineargradient>
                    
                                    
                    <mask
                      id="__path32-mask"
                    >
                      
                                        
                      <path
                        d="M22.9,17.2c-1.7,0-3.2,1.2-3.5,2.8h-4.8c-0.4-1.6-1.8-2.8-3.6-2.8c-0.1,0-0.2,0-0.3,0l-0.5-1.7h16L30.5,5H7L5.8,1l0,0l0,0
                                                    l0-0.1L5.6,0.9l-5-0.4l0.2,1.7l3.4,0.3l4.7,15.4c-0.9,0.7-1.5,1.7-1.5,2.9c0,2,1.6,3.7,3.7,3.7c1.7,0,3.2-1.2,3.6-2.8h4.8
                                                    c0.4,1.6,1.8,2.8,3.5,2.8c2,0,3.7-1.6,3.7-3.7C26.6,18.8,24.9,17.2,22.9,17.2z"
                        fill="url(#__path32-gradient)"
                        id="__path32-mask-shape"
                        stroke="white"
                        stroke-width="0"
                      >
                        
                                        
                      </path>
                      
                                    
                    </mask>
                    
                                    
                  </defs>
                  
                                    
                  <path
                    d="M22.9,17.2c-1.7,0-3.2,1.2-3.5,2.8h-4.8c-0.4-1.6-1.8-2.8-3.6-2.8c-0.1,0-0.2,0-0.3,0l-0.5-1.7h16L30.5,5H7L5.8,1l0,0l0,0
                                            l0-0.1L5.6,0.9l-5-0.4l0.2,1.7l3.4,0.3l4.7,15.4c-0.9,0.7-1.5,1.7-1.5,2.9c0,2,1.6,3.7,3.7,3.7c1.7,0,3.2-1.2,3.6-2.8h4.8
                                            c0.4,1.6,1.8,2.8,3.5,2.8c2,0,3.7-1.6,3.7-3.7C26.6,18.8,24.9,17.2,22.9,17.2z"
                    id="__path32-shape"
                    mask="url(#__path32-mask)"
                    stroke="#89919A "
                    stroke-width="0"
                  >
                    
                                    
                  </path>
                  
                                    
                  <path
                    d="M22.9,17.2c-1.7,0-3.2,1.2-3.5,2.8h-4.8c-0.4-1.6-1.8-2.8-3.6-2.8c-0.1,0-0.2,0-0.3,0l-0.5-1.7h16L30.5,5H7L5.8,1l0,0l0,0
                                            l0-0.1L5.6,0.9l-5-0.4l0.2,1.7l3.4,0.3l4.7,15.4c-0.9,0.7-1.5,1.7-1.5,2.9c0,2,1.6,3.7,3.7,3.7c1.7,0,3.2-1.2,3.6-2.8h4.8
                                            c0.4,1.6,1.8,2.8,3.5,2.8c2,0,3.7-1.6,3.7-3.7C26.6,18.8,24.9,17.2,22.9,17.2z"
                    fill="transparent"
                    id="__path32-shape-border"
                    stroke="#89919A "
                    stroke-width="0.25"
                  >
                    
                                    
                  </path>
                  
                                
                </svg>
                
                            
              </svg>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              aria-label="Status Indicator example for order dispatching"
              aria-roledescription="Status Indicator"
              aria-valuetext="70%"
              class="fd-status-indicator fd-status-indicator--critical coreographed fd-status-indicator--md fd-micro-process-flow__focusable-item"
              focusable="true"
              role="progressbar"
              tabindex="0"
              title="Fill object to form single filling pattern"
            >
              
                            
              <svg
                class="fd-status-indicator__svg"
                data-sap-ui="__shape0-__box21-24"
                height="100%"
                id="__shape0__box29-24-factory"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="0 0 26 25"
                width="100%"
                x="0"
                xlmns="http://www.w3.org/2000/svg"
                y="0"
              >
                
                                
                <svg
                  data-sap-ui="__path29"
                  id="__path29"
                  overflow="visible"
                  preserveAspectRatio="xMidYMid meet"
                  xlmns="http://www.w3.org/2000/svg"
                >
                  
                                
                  <defs>
                    
                                    
                    <lineargradient
                      id="__path29-gradient"
                      x1="0"
                      x2="0"
                      y1="1"
                      y2="0"
                    >
                      
                                    
                      <stop
                        offset="1"
                        stop-color="white"
                      />
                      
                                    
                      <stop
                        offset="1"
                        stop-color="transparent"
                      />
                      
                                    
                    </lineargradient>
                    
                                    
                    <mask
                      id="__path29-mask"
                    >
                      
                                    
                      <path
                        0"=""
                        d="M19.6,12.9l0-3.7l-4.9,3.7V9.2l-5,3.9l-0.3,0l0-9.4H5.8v9.4H4.6V0.5H1l-0.3,24h23.6V9.3L19.6,12.9z M22.2,19.9H17v-2.4h5.2
                                            V19.9z stroke-width="
                        fill="url(#__path29-gradient)"
                        id="__path29-mask-shape"
                        stroke="white"
                      >
                        
                                    
                      </path>
                      
                                    
                    </mask>
                    
                                
                  </defs>
                  
                                
                  <path
                    0"=""
                    d="M19.6,12.9l0-3.7l-4.9,3.7V9.2l-5,3.9l-0.3,0l0-9.4H5.8v9.4H4.6V0.5H1l-0.3,24h23.6V9.3L19.6,12.9z M22.2,19.9H17v-2.4h5.2
                                    V19.9z stroke-width="
                    id="__path29-shape"
                    mask="url(#__path29-mask)"
                    stroke="#89919A "
                  >
                    
                                
                  </path>
                  
                                
                  <path
                    0.25"=""
                    d="M19.6,12.9l0-3.7l-4.9,3.7V9.2l-5,3.9l-0.3,0l0-9.4H5.8v9.4H4.6V0.5H1l-0.3,24h23.6V9.3L19.6,12.9z M22.2,19.9H17v-2.4h5.2
                                    V19.9z stroke-width="
                    fill="transparent"
                    id="__path29-shape-border"
                    stroke="#89919A "
                  >
                    
                                
                  </path>
                  
                                
                </svg>
                
                            
              </svg>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              aria-label="Status Indicator example for order dispatching"
              aria-roledescription="Status Indicator"
              aria-valuetext="70%"
              class="fd-status-indicator fd-status-indicator--critical coreographed fd-status-indicator--md fd-micro-process-flow__focusable-item"
              focusable="true"
              role="progressbar"
              tabindex="0"
              title="Fill object to form single filling pattern"
            >
              
                            
              <svg
                class="fd-status-indicator__svg"
                data-sap-ui="__shape0-__box21-24"
                height="100%"
                id="__shape0__box30-24-truck"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="0 0 45 25"
                width="100%"
                x="0"
                xlmns="http://www.w3.org/2000/svg"
                y="0"
              >
                
                                
                <svg
                  data-sap-ui="__path30"
                  id="__path30"
                  overflow="visible"
                  preserveAspectRatio="xMidYMid meet"
                  xlmns="http://www.w3.org/2000/svg"
                >
                  
                                
                  <defs>
                    
                                    
                    <lineargradient
                      id="__path30-gradient"
                      x1="0"
                      x2="0"
                      y1="1"
                      y2="0"
                    >
                      
                                    
                      <stop
                        offset="0.5"
                        stop-color="white"
                      />
                      
                                    
                      <stop
                        offset="0.5"
                        stop-color="transparent"
                      />
                      
                                    
                    </lineargradient>
                    
                                    
                    <mask
                      id="__path30-mask"
                    >
                      
                                    
                      <path
                        d="M44.2,13.1l-2.6-6.5c-0.1-0.2-0.6-1.9-2.2-1.9h-6V2.3c0-1-0.8-1.8-1.8-1.8H2.7c-1.1,0-1.9,0.9-1.9,1.9v18.4h3.3h0.5l0,0
                                                c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h0.5h0.6l0,0c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h9.1h2.9l0,0
                                                c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h4.5V13.1z"
                        fill="url(#__path30-gradient)"
                        id="__path30-mask-shape"
                        stroke="white"
                        stroke-width="0"
                      >
                        
                                    
                      </path>
                      
                                    
                    </mask>
                    
                                
                  </defs>
                  
                                
                  <path
                    d="M44.2,13.1l-2.6-6.5c-0.1-0.2-0.6-1.9-2.2-1.9h-6V2.3c0-1-0.8-1.8-1.8-1.8H2.7c-1.1,0-1.9,0.9-1.9,1.9v18.4h3.3h0.5l0,0
                                        c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h0.5h0.6l0,0c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h9.1h2.9l0,0
                                        c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h4.5V13.1z"
                    id="__path30-shape"
                    mask="url(#__path30-mask)"
                    stroke="#89919A "
                    stroke-width="0"
                  >
                    
                                
                  </path>
                  
                                
                  <path
                    d="M44.2,13.1l-2.6-6.5c-0.1-0.2-0.6-1.9-2.2-1.9h-6V2.3c0-1-0.8-1.8-1.8-1.8H2.7c-1.1,0-1.9,0.9-1.9,1.9v18.4h3.3h0.5l0,0
                                        c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h0.5h0.6l0,0c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h9.1h2.9l0,0
                                        c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h4.5V13.1z"
                    fill="transparent"
                    id="__path30-shape-border"
                    stroke="#89919A "
                    stroke-width="0.25"
                  >
                    
                                
                  </path>
                  
                                
                </svg>
                
                            
              </svg>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              aria-label="Status Indicator example for order dispatching"
              aria-roledescription="Status Indicator"
              aria-valuetext="70%"
              class="fd-status-indicator coreographed fd-status-indicator--md fd-micro-process-flow__focusable-item"
              focusable="true"
              role="progressbar"
              tabindex="0"
              title="Fill object to form single filling pattern"
            >
              
                            
              <svg
                class="fd-status-indicator__svg"
                data-sap-ui="__shape0-__box21-24"
                height="100%"
                id="__shape0__box31-24-plane"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="0 0 26 25"
                width="100%"
                x="0"
                xlmns="http://www.w3.org/2000/svg"
                y="0"
              >
                
                                
                <svg
                  data-sap-ui="__path31"
                  id="__path31"
                  overflow="visible"
                  preserveAspectRatio="xMidYMid meet"
                  xlmns="http://www.w3.org/2000/svg"
                >
                  
                                    
                  <defs>
                    
                                    
                    <lineargradient
                      id="__path31-gradient"
                      x1="0"
                      x2="0"
                      y1="1"
                      y2="0"
                    >
                      
                                        
                      <stop
                        offset="0"
                        stop-color="white"
                      />
                      
                                        
                      <stop
                        offset="0"
                        stop-color="transparent"
                      />
                      
                                    
                    </lineargradient>
                    
                                    
                    <mask
                      id="__path31-mask"
                    >
                      
                                        
                      <path
                        d="M8.8,24.5C8.8,24.5,8.8,24.5,8.8,24.5c-0.1,0-0.2-0.1-0.2-0.1l-2.9-4.9l-0.2-0.2l-4.8-2.9
                                                    c-0.1,0-0.1-0.1-0.1-0.2c0-0.1,0-0.1,0.1-0.2c0-0.1,0.9-1.2,1-1.4c0,0,0,0,0,0c0.1-0.1,0.2-0.1,0.2-0.1l4.7,1.6l5.5-6.7L2.3,2.8
                                                    C2.2,2.7,2.2,2.6,2.2,2.5l0.6-1.1C2.9,1.3,3,1.2,3.1,1.3l12.4,4.8l3.5-3.4c0.9-0.8,1.8-1.4,2.7-1.8c0.2-0.1,0.4-0.1,0.5-0.2
                                                    c0,0,1.1-0.4,1.8,0.3c0.7,0.7,0.3,1.7,0.3,1.8c-0.1,0.2-0.1,0.4-0.2,0.5c-0.4,0.9-1,1.8-1.8,2.7l-3.4,3.5l4.8,12.4
                                                    c0,0.1,0,0.2-0.1,0.3l-1.1,0.6c-0.1,0.1-0.2,0-0.3-0.1l-6.7-9.8l-6.7,5.5l1.6,4.7c0,0.1,0,0.2-0.1,0.2c0,0,0,0,0,0
                                                    c-0.1,0.1-1.3,1-1.4,1C8.9,24.5,8.8,24.5,8.8,24.5z"
                        fill="url(#__path31-gradient)"
                        id="__path31-mask-shape"
                        stroke="white"
                        stroke-width="0"
                      >
                        
                                        
                      </path>
                      
                                    
                    </mask>
                    
                                    
                  </defs>
                  
                                    
                  <path
                    d="M8.8,24.5C8.8,24.5,8.8,24.5,8.8,24.5c-0.1,0-0.2-0.1-0.2-0.1l-2.9-4.9l-0.2-0.2l-4.8-2.9
                                            c-0.1,0-0.1-0.1-0.1-0.2c0-0.1,0-0.1,0.1-0.2c0-0.1,0.9-1.2,1-1.4c0,0,0,0,0,0c0.1-0.1,0.2-0.1,0.2-0.1l4.7,1.6l5.5-6.7L2.3,2.8
                                            C2.2,2.7,2.2,2.6,2.2,2.5l0.6-1.1C2.9,1.3,3,1.2,3.1,1.3l12.4,4.8l3.5-3.4c0.9-0.8,1.8-1.4,2.7-1.8c0.2-0.1,0.4-0.1,0.5-0.2
                                            c0,0,1.1-0.4,1.8,0.3c0.7,0.7,0.3,1.7,0.3,1.8c-0.1,0.2-0.1,0.4-0.2,0.5c-0.4,0.9-1,1.8-1.8,2.7l-3.4,3.5l4.8,12.4
                                            c0,0.1,0,0.2-0.1,0.3l-1.1,0.6c-0.1,0.1-0.2,0-0.3-0.1l-6.7-9.8l-6.7,5.5l1.6,4.7c0,0.1,0,0.2-0.1,0.2c0,0,0,0,0,0
                                            c-0.1,0.1-1.3,1-1.4,1C8.9,24.5,8.8,24.5,8.8,24.5z"
                    id="__path31-shape"
                    mask="url(#__path31-mask)"
                    stroke="#89919A "
                    stroke-width="0"
                  >
                    
                                    
                  </path>
                  
                                    
                  <path
                    d="M8.8,24.5C8.8,24.5,8.8,24.5,8.8,24.5c-0.1,0-0.2-0.1-0.2-0.1l-2.9-4.9l-0.2-0.2l-4.8-2.9
                                            c-0.1,0-0.1-0.1-0.1-0.2c0-0.1,0-0.1,0.1-0.2c0-0.1,0.9-1.2,1-1.4c0,0,0,0,0,0c0.1-0.1,0.2-0.1,0.2-0.1l4.7,1.6l5.5-6.7L2.3,2.8
                                            C2.2,2.7,2.2,2.6,2.2,2.5l0.6-1.1C2.9,1.3,3,1.2,3.1,1.3l12.4,4.8l3.5-3.4c0.9-0.8,1.8-1.4,2.7-1.8c0.2-0.1,0.4-0.1,0.5-0.2
                                            c0,0,1.1-0.4,1.8,0.3c0.7,0.7,0.3,1.7,0.3,1.8c-0.1,0.2-0.1,0.4-0.2,0.5c-0.4,0.9-1,1.8-1.8,2.7l-3.4,3.5l4.8,12.4
                                            c0,0.1,0,0.2-0.1,0.3l-1.1,0.6c-0.1,0.1-0.2,0-0.3-0.1l-6.7-9.8l-6.7,5.5l1.6,4.7c0,0.1,0,0.2-0.1,0.2c0,0,0,0,0,0
                                            c-0.1,0.1-1.3,1-1.4,1C8.9,24.5,8.8,24.5,8.8,24.5z"
                    fill="transparent"
                    id="__path31-shape-border"
                    stroke="#89919A "
                    stroke-width="0.25"
                  >
                    
                                    
                  </path>
                  
                                
                </svg>
                
                            
              </svg>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Micro Process Flow Micro process flow with dependent steps (Default) 1`] = `
<div
  class="fd-micro-process-flow"
>
  
    
  <div
    class="fd-micro-process-flow__overflow-container"
  >
    
        
    <div
      class="fd-micro-process-flow__wrapper"
    >
      
            
      <div
        class="fd-micro-process-flow__item"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--pending"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector fd-micro-process-flow__connector--intermediate"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--phone"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--map"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--log"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Micro Process Flow Micro process flow with elements inserted between nodes 1`] = `
<div
  class="fd-micro-process-flow"
>
  
    
  <div
    class="fd-micro-process-flow__overflow-container"
  >
    
        
    <div
      class="fd-micro-process-flow__wrapper"
    >
      
            
      <div
        class="fd-micro-process-flow__item"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            />
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          >
            
                        
            <i
              class="sap-icon--color-critical sap-icon--syringe fd-micro-process-flow__intermediary-item"
              role="presentation"
              style="font-size: 1rem;"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--pending"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          >
            
                        
            <i
              class="sap-icon--color-critical sap-icon--syringe fd-micro-process-flow__intermediary-item"
              role="presentation"
              style="font-size: 2rem;"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--phone"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          >
            
                        
            <i
              class="sap-icon--color-critical sap-icon--syringe fd-micro-process-flow__intermediary-item"
              role="presentation"
              style="font-size: 1.5rem;"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--map"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          >
            
                        
            <i
              class="sap-icon--color-critical sap-icon--syringe fd-micro-process-flow__intermediary-item"
              role="presentation"
              style="font-size: 1rem;"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--log"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Micro Process Flow Micro process flow with independent steps 1`] = `
<div
  class="fd-micro-process-flow fd-micro-process-flow--independent-steps"
>
  
    
  <div
    class="fd-micro-process-flow__overflow-container"
  >
    
        
    <div
      class="fd-micro-process-flow__wrapper"
    >
      
            
      <div
        class="fd-micro-process-flow__item"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--pending"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--phone"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--map"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-micro-process-flow__connector"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
      >
        
                
        <div
          class="fd-micro-process-flow__content"
        >
          
                    
          <div
            class="fd-micro-process-flow__content-wrapper"
          >
            
                        
            <div
              class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
              tabindex="0"
            >
              
                            
              <i
                class="fd-micro-process-flow__icon sap-icon--log"
                role="presentation"
              />
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Micro Process Flow Micro process flow with overflow 1`] = `
<section>
  <div
    class="fd-micro-process-flow"
  >
    
    
    <div
      class="fd-micro-process-flow__overflow-container"
    >
      
        
      <div
        class="fd-micro-process-flow__wrapper"
      >
        
            
        <div
          class="fd-micro-process-flow__item"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--pending"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector fd-micro-process-flow__connector--intermediate"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--phone"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--map"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--log"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--opportunity"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--task"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--lead"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <a
      class="fd-micro-process-flow__link-next"
      role="button"
      tabindex="0"
      type="button"
    >
      20
    </a>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <div
    class="fd-micro-process-flow"
  >
    
    
    <a
      class="fd-micro-process-flow__link-previous"
      role="button"
      tabindex="0"
      type="button"
    >
      10
    </a>
    
    
    <div
      class="fd-micro-process-flow__overflow-container"
    >
      
        
      <div
        class="fd-micro-process-flow__wrapper"
      >
        
            
        <div
          class="fd-micro-process-flow__item"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              />
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--pending"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector fd-micro-process-flow__connector--intermediate"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--phone"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--map"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--log"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--opportunity"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--task"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-micro-process-flow__icon sap-icon--lead"
                  role="presentation"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <a
      class="fd-micro-process-flow__link-next"
      role="button"
      tabindex="0"
      type="button"
    >
      10
    </a>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Micro Process Flow Micro process flow with popover 1`] = `
<div
  style="height: 300px;"
>
  

  <div
    class="fd-micro-process-flow"
  >
    
    
    <div
      class="fd-micro-process-flow__overflow-container"
      style="overflow: visible;"
    >
      
        
      <div
        class="fd-micro-process-flow__wrapper"
      >
        
            
        <div
          class="fd-micro-process-flow__item"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-popover"
              >
                
                            
                <div
                  aria-controls="popoverMPF1"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item fd-popover__control"
                  onclick="onPopoverClick('popoverMPF1');"
                  tabindex="0"
                >
                  
                            
                </div>
                
                            
                <div
                  aria-hidden="false"
                  class="fd-popover__body"
                  id="popoverMPF1"
                >
                  
                                
                  <nav
                    aria-label="options"
                    class="fd-menu"
                  >
                    
                                    
                    <ul
                      class="fd-menu__list fd-menu__list--no-shadow"
                    >
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 1
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 2
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 3
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                    
                    </ul>
                    
                                
                  </nav>
                  
                            
                </div>
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--positive"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-popover"
              >
                
                            
                <div
                  aria-controls="popoverMPF2"
                  aria-expanded="false"
                  aria-haspopup="false"
                  class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item fd-popover__control"
                  onclick="onPopoverClick('popoverMPF2');"
                  tabindex="0"
                >
                  
                                
                  <i
                    class="fd-micro-process-flow__icon sap-icon--pending"
                    role="presentation"
                  />
                  
                            
                </div>
                
                            
                <div
                  aria-hidden="true"
                  class="fd-popover__body"
                  id="popoverMPF2"
                >
                  
                                
                  <nav
                    aria-label="options"
                    class="fd-menu"
                  >
                    
                                    
                    <ul
                      class="fd-menu__list fd-menu__list--no-shadow"
                    >
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 1
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 2
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 3
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                    
                    </ul>
                    
                                
                  </nav>
                  
                            
                </div>
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector fd-micro-process-flow__connector--intermediate"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--information"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-popover"
              >
                
                            
                <div
                  aria-controls="popoverMPF3"
                  aria-expanded="false"
                  aria-haspopup="false"
                  class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item fd-popover__control"
                  onclick="onPopoverClick('popoverMPF3');"
                  tabindex="0"
                >
                  
                                
                  <i
                    class="fd-micro-process-flow__icon sap-icon--phone"
                    role="presentation"
                  />
                  
                            
                </div>
                
                            
                <div
                  aria-hidden="true"
                  class="fd-popover__body"
                  id="popoverMPF3"
                >
                  
                                
                  <nav
                    aria-label="options"
                    class="fd-menu"
                  >
                    
                                    
                    <ul
                      class="fd-menu__list fd-menu__list--no-shadow"
                    >
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 1
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 2
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 3
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                    
                    </ul>
                    
                                
                  </nav>
                  
                            
                </div>
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--negative"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-popover"
              >
                
                            
                <div
                  aria-controls="popoverMPF4"
                  aria-expanded="false"
                  aria-haspopup="false"
                  class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item fd-popover__control"
                  onclick="onPopoverClick('popoverMPF4');"
                  tabindex="0"
                >
                  
                                
                  <i
                    class="fd-micro-process-flow__icon sap-icon--map"
                    role="presentation"
                  />
                  
                            
                </div>
                
                            
                <div
                  aria-hidden="true"
                  class="fd-popover__body"
                  id="popoverMPF4"
                >
                  
                                
                  <nav
                    aria-label="options"
                    class="fd-menu"
                  >
                    
                                    
                    <ul
                      class="fd-menu__list fd-menu__list--no-shadow"
                    >
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 1
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 2
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 3
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                    
                    </ul>
                    
                                
                  </nav>
                  
                            
                </div>
                
                        
              </div>
              
                    
            </div>
            
                    
            <div
              class="fd-micro-process-flow__connector"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-micro-process-flow__item fd-micro-process-flow__item--critical"
        >
          
                
          <div
            class="fd-micro-process-flow__content"
          >
            
                    
            <div
              class="fd-micro-process-flow__content-wrapper"
            >
              
                        
              <div
                class="fd-popover"
              >
                
                            
                <div
                  aria-controls="popoverMPF5"
                  aria-expanded="false"
                  aria-haspopup="false"
                  class="fd-micro-process-flow__icon-container fd-micro-process-flow__focusable-item fd-popover__control"
                  onclick="onPopoverClick('popoverMPF5');"
                  tabindex="0"
                >
                  
                                
                  <i
                    class="fd-micro-process-flow__icon sap-icon--log"
                    role="presentation"
                  />
                  
                            
                </div>
                
                            
                <div
                  aria-hidden="true"
                  class="fd-popover__body"
                  id="popoverMPF5"
                >
                  
                                
                  <nav
                    aria-label="options"
                    class="fd-menu"
                  >
                    
                                    
                    <ul
                      class="fd-menu__list fd-menu__list--no-shadow"
                    >
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 1
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 2
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                        
                      <li
                        class="fd-menu__item"
                      >
                        
                                            
                        <a
                          class="fd-menu__link"
                          href="#"
                        >
                          
                                            
                          <span
                            class="fd-menu__title"
                          >
                            Option 3
                          </span>
                          
                                            
                        </a>
                        
                                        
                      </li>
                      
                                    
                    </ul>
                    
                                
                  </nav>
                  
                            
                </div>
                
                        
              </div>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;
